[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Background2.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://FOnt.tres" type="DynamicFont" id=3]
[ext_resource path="res://Figth.gd" type="Script" id=4]
[ext_resource path="res://FirstBoss.tres" type="Resource" id=5]

[sub_resource type="Animation" id=1]
resource_name = "EnemyMove"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 18 ), Vector2( 0, 50.682 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyContainer/TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "enemy_damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyContainer/TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 18 ), Vector2( 0, 50.682 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 1, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.443137 )

[sub_resource type="DynamicFontData" id=6]
antialiased = false
font_path = "res://Assets/AncientModernTales-a7Po.ttf"

[sub_resource type="DynamicFont" id=7]
size = 34
outline_color = Color( 1, 0, 0, 1 )
extra_spacing_char = 2
extra_spacing_space = 2
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 23
outline_color = Color( 1, 0, 0, 1 )
extra_spacing_char = 2
extra_spacing_space = 2
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFontData" id=12]
antialiased = false
font_path = "res://Assets/AncientModernTales-a7Po.ttf"

[sub_resource type="DynamicFont" id=13]
size = 72
outline_color = Color( 1, 0, 0, 1 )
extra_spacing_char = 2
extra_spacing_space = 2
font_data = SubResource( 12 )

[node name="Figth" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
enemy = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 899.0
margin_bottom = 604.0
texture = ExtResource( 1 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EnemyMove = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/enemy_damaged = SubResource( 14 )

[node name="EnemyContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -151.5
margin_top = 150.0
margin_right = 151.5
margin_bottom = 366.0

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
margin_right = 303.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 50.0
allow_greater = true
allow_lesser = true
percent_visible = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.290196, 0.290196, 0.290196, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HP: 500/1000"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="EnemyContainer"]
margin_top = 18.0
margin_right = 303.0
margin_bottom = 216.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -92.0
custom_styles/panel = SubResource( 5 )

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 27.0
margin_right = 445.0
margin_bottom = 65.0
size_flags_horizontal = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 449.0
margin_top = 33.0
margin_right = 895.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
allow_greater = true
allow_lesser = true
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
margin_bottom = 2.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.290196, 0.290196, 0.290196, 1 )
custom_fonts/font = SubResource( 8 )
text = "HP: 500/1000"
align = 1
valign = 1

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -450.0
margin_right = 450.0
margin_bottom = 92.0
custom_styles/panel = SubResource( 5 )

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
custom_constants/separation = 6
alignment = 1

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
margin_right = 292.0
margin_bottom = 80.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
enabled_focus_mode = 0
text = "ATTACK"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
margin_left = 298.0
margin_right = 590.0
margin_bottom = 80.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
enabled_focus_mode = 0
text = "DEFEND"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
margin_left = 596.0
margin_right = 888.0
margin_bottom = 80.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
enabled_focus_mode = 0
text = "RUN"

[node name="TextBox" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 13 )
text = "Aparecio ????"

[node name="Ticker" type="Label" parent="TextBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 404.0
margin_top = -4.0
margin_right = 440.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 13 )
text = ">"
autowrap = true

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
